--- a/package.json
+++ b/package.json
@@ -5,18 +5,51 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "android": "DARK_MODE=media expo start --android",
+    "ios": "DARK_MODE=media expo start --ios",
+    "web": "DARK_MODE=media expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "postinstall": "patch-package"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.4.2",
     "@expo/vector-icons": "^14.0.2",
+    "@gluestack-ui/accordion": "^1.0.8",
+    "@gluestack-ui/actionsheet": "^0.2.46",
+    "@gluestack-ui/alert": "^0.1.16",
+    "@gluestack-ui/alert-dialog": "^0.1.32",
+    "@gluestack-ui/avatar": "^0.1.18",
+    "@gluestack-ui/button": "^1.0.8",
+    "@gluestack-ui/checkbox": "^0.1.33",
+    "@gluestack-ui/divider": "^0.1.10",
+    "@gluestack-ui/fab": "^0.1.22",
+    "@gluestack-ui/form-control": "^0.1.19",
+    "@gluestack-ui/icon": "^0.1.23",
+    "@gluestack-ui/image": "^0.1.11",
+    "@gluestack-ui/input": "^0.1.32",
+    "@gluestack-ui/link": "^0.1.23",
+    "@gluestack-ui/menu": "^0.2.37",
+    "@gluestack-ui/modal": "^0.1.35",
+    "@gluestack-ui/nativewind-utils": "^1.0.23",
+    "@gluestack-ui/overlay": "^0.1.16",
+    "@gluestack-ui/popover": "^0.1.42",
+    "@gluestack-ui/pressable": "^0.1.17",
+    "@gluestack-ui/progress": "^0.1.18",
+    "@gluestack-ui/radio": "^0.1.34",
+    "@gluestack-ui/select": "^0.1.30",
+    "@gluestack-ui/slider": "^0.1.26",
+    "@gluestack-ui/spinner": "^0.1.15",
+    "@gluestack-ui/switch": "^0.1.23",
+    "@gluestack-ui/textarea": "^0.1.24",
+    "@gluestack-ui/toast": "^1.0.8",
+    "@gluestack-ui/tooltip": "^0.1.35",
+    "@legendapp/motion": "^2.4.0",
     "@react-navigation/native": "^6.0.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -26,14 +59,18 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-css-interop": "^0.0.36",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-svg": "^13.4.0",
+    "react-native-web": "~0.19.10",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,6 +79,7 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "jscodeshift": "^0.15.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
