--- a/package.json
+++ b/package.json
@@ -59,9 +59,12 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "i18next": "^23.16.6",
+    "i18next-browser-languagedetector": "^8.0.0",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.1.1",
     "react-native": "0.74.5",
     "react-native-css-interop": "^0.0.36",
     "react-native-gesture-handler": "~2.16.1",
