--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "expo-web-browser": "~13.0.3",
     "i18next": "^23.16.6",
     "i18next-browser-languagedetector": "^8.0.0",
+    "lucide-react-native": "^0.460.0",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
