--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "@gluestack-ui/toast": "^1.0.8",
     "@gluestack-ui/tooltip": "^0.1.35",
     "@legendapp/motion": "^2.4.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.46.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -74,6 +77,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^13.4.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.14"
   },
