--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@gluestack-ui/toast": "^1.0.8",
     "@gluestack-ui/tooltip": "^0.1.35",
     "@legendapp/motion": "^2.4.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^6.0.2",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.46.1",
@@ -65,6 +65,7 @@
     "expo-web-browser": "~13.0.3",
     "i18next": "^23.16.6",
     "i18next-browser-languagedetector": "^8.0.0",
+    "localstorage-polyfill": "^1.0.1",
     "lucide-react-native": "^0.460.0",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
