--- a/app.json
+++ b/app.json
@@ -1,24 +1,24 @@
 {
   "expo": {
     "name": "PartyStarter",
-    "slug": "PartyStarter",
+    "slug": "party-starter",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.colomeramonica.partystarter"
     },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.colomeramonica.partystarter"
     },
     "web": {
       "bundler": "metro",
@@ -29,6 +29,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "aee118dc-8979-475b-89a7-972a0b315433"
+      }
+    },
+    "owner": "colomeramonica"
   }
 }
